--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,3 +2,20 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: green;
 }
+
+@keyframes inflate {
+    from {
+        r: 6px;
+    }
+    to {
+        r: 12px;
+    }
+}
+
+svg.plot circle:hover {
+    animation-duration: .5s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: both;
+    animation-name: inflate;
+}
